[gd_scene load_steps=41 format=3 uid="uid://db6pbi4t02sat"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_qfcd4"]
[ext_resource type="Texture2D" uid="uid://dn5jx4ko6xggb" path="res://assets/AnimationSheets/Player_Character_32x32/Player_idle.png" id="1_v14us"]
[ext_resource type="Script" path="res://scenes/utils/health.gd" id="2_cp367"]
[ext_resource type="Script" path="res://scenes/utils/money.gd" id="2_vn65e"]
[ext_resource type="Texture2D" uid="uid://cagwjhptnquwc" path="res://assets/AnimationSheets/Player_Character_32x32/Player_Death .png" id="3_dgj8b"]
[ext_resource type="Texture2D" uid="uid://cn7g42kl6c6oa" path="res://assets/AnimationSheets/Player_Character_32x32/Player_run.png" id="3_opcvu"]
[ext_resource type="Texture2D" uid="uid://dj2ayvg0em6v3" path="res://assets/AnimationSheets/Player_Character_32x32/Player_Hit .png" id="4_5m7of"]
[ext_resource type="PackedScene" uid="uid://d202d3ywmlgpe" path="res://scenes/guns/pistol.tscn" id="5_kqkl4"]
[ext_resource type="Script" path="res://scenes/utils/hurt_box.gd" id="6_678yo"]
[ext_resource type="AudioStream" uid="uid://bqoxcjnu4kws5" path="res://assets/SFX & BGM/hurt.mp3" id="10_dgqar"]
[ext_resource type="AudioStream" uid="uid://c2xqfqkjmtscw" path="res://assets/SFX & BGM/main_game_bgm.mp3" id="11_54lxy"]
[ext_resource type="AudioStream" uid="uid://d4eefg500sk8c" path="res://assets/SFX & BGM/wave_ended.mp3" id="11_pg42s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y6abr"]
atlas = ExtResource("3_dgj8b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgfrk"]
atlas = ExtResource("3_dgj8b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8clvu"]
atlas = ExtResource("3_dgj8b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgwhi"]
atlas = ExtResource("3_dgj8b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o88cq"]
atlas = ExtResource("3_dgj8b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn3w8"]
atlas = ExtResource("3_dgj8b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_duyst"]
atlas = ExtResource("3_dgj8b")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwkhn"]
atlas = ExtResource("3_dgj8b")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl5r"]
atlas = ExtResource("1_v14us")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urpye"]
atlas = ExtResource("1_v14us")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejeam"]
atlas = ExtResource("1_v14us")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uad"]
atlas = ExtResource("1_v14us")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iopes"]
atlas = ExtResource("1_v14us")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_enmtx"]
atlas = ExtResource("1_v14us")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fh2h"]
atlas = ExtResource("4_5m7of")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqo7e"]
atlas = ExtResource("4_5m7of")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iir0y"]
atlas = ExtResource("4_5m7of")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehw6l"]
atlas = ExtResource("3_opcvu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ole1"]
atlas = ExtResource("3_opcvu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isvme"]
atlas = ExtResource("3_opcvu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fiau"]
atlas = ExtResource("3_opcvu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfrwk"]
atlas = ExtResource("3_opcvu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_av5wy"]
atlas = ExtResource("3_opcvu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muetp"]
atlas = ExtResource("3_opcvu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kysgb"]
atlas = ExtResource("3_opcvu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5j075"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6abr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgfrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8clvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgwhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o88cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn3w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duyst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwkhn")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urpye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejeam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iopes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enmtx")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fh2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqo7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iir0y")
}],
"loop": false,
"name": &"hit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehw6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ole1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isvme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfrwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av5wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muetp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kysgb")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_60i88"]
radius = 6.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_esuur"]
radius = 6.5
height = 26.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2, 2)
collision_layer = 16
collision_mask = 16
script = ExtResource("1_qfcd4")

[node name="Money" type="Node" parent="."]
script = ExtResource("2_vn65e")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_cp367")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5j075")
animation = &"death"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_60i88")

[node name="WeaponHolder" type="Node2D" parent="."]
position = Vector2(0, 8)

[node name="Pistol" parent="WeaponHolder" instance=ExtResource("5_kqkl4")]

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
script = ExtResource("6_678yo")
health = NodePath("../Health")
knockback_force = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_esuur")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dgqar")

[node name="RelaxBGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_pg42s")

[node name="MainBGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_54lxy")

[node name="CheatCodeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="health_depleted" from="Health" to="." method="_on_death"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="recieved_damage" from="HurtBox" to="." method="_on_hurt_box_recieved_damage"]
[connection signal="timeout" from="CheatCodeTimer" to="." method="_on_cheat_code_timer_timeout"]
